# agro-weather-forecast

./: .gitignore  README.md  main.py  mlflow.db  pyproject.toml  requirements.txt
.github/workflows/: daily_predict.yml  monthly_pipeline.yml
api/: main.py
app/: streamlit_app.py
data/: agro_forecast.db  best_model.pkl  features.csv  monitor_log.json  quality_results.json  raw_weather.csv  scaler.pkl
notebooks/: eda.ipynb
src/: backfill.py  database.py  features.py  ingestion.py  monitor.py  predict.py  quality.py  train.py  train_final_model.py  train_xgb.py
