[project]
name = "agro-weather-forecast"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "fastapi>=0.135.1",
    "joblib>=1.5.3",
    "mlflow>=3.10.1",
    "numpy>=2.4.3",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.2",
    "requests>=2.32.5",
    "scikit-learn>=1.8.0",
    "torch>=2.10.0",
    "uvicorn>=0.42.0",
    "xgboost>=3.2.0",
]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "notebook>=7.5.5",
    "seaborn>=0.13.2",
]
